adjusted modal styling to work correctly on mobile

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -220,114 +220,112 @@ a {
   background: rgba(201, 69, 21, 0.07);
 }
 
-@media (min-width: 375px) {
-  .header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    width: 100%;
-    padding-bottom: 1.5rem;
-  }
-  .header__colour-block {
-    position: absolute;
-    z-index: -1;
-    background-color: #232940;
-    width: 100%;
-    height: 12.5rem;
-  }
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  padding-bottom: 1.5rem;
 }
 
-@media (min-width: 375px) and (min-width: 768px) {
+.header__colour-block {
+  position: absolute;
+  z-index: -1;
+  background-color: #232940;
+  width: 100%;
+  height: 12.5rem;
+}
+
+@media (min-width: 768px) {
   .header__colour-block {
     height: 11.625rem;
   }
 }
 
-@media (min-width: 375px) {
-  .header__logo-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 100%;
-    padding: 1.89rem 0;
-    position: relative;
-    z-index: 10;
-  }
-  .header__logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 1.75rem;
-    width: 8rem;
-  }
-  .header__wh-inv-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 2.25rem;
-    position: relative;
-    z-index: 10;
-  }
+.header__logo-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  padding: 1.89rem 0;
 }
 
-@media (min-width: 375px) and (min-width: 1280px) {
+.header__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 1.75rem;
+  width: 8rem;
+}
+
+.header__wh-inv-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 2.25rem;
+  position: relative;
+}
+
+@media (min-width: 1280px) {
   .header__wh-inv-container {
     padding-right: 3.875rem;
   }
 }
 
-@media (min-width: 375px) {
-  .header__link-btn {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    width: 10.25rem;
-    height: 100%;
-    margin-right: 1rem;
-  }
-  .header__link-btn--bdRadius {
-    border-radius: 1.25rem;
-    width: 10.25rem;
-    height: 100%;
-    background: #13182c;
-    margin-left: 1rem;
-  }
-  .header__wh-btn, .header__inv-btn {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 1.25rem;
-    border: 0;
-    font-family: "Titillium Web";
-    font-size: 0.8125rem;
-    line-height: 1.25rem;
-    font-weight: none;
-    font-style: normal;
-    color: #ffffff;
-    background-color: #232940;
-  }
-  .header__wh-btn {
-    background-color: #13182c;
-  }
-  .header__inv-btn {
-    background-color: #232940;
-  }
+.header__link-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 10.25rem;
+  height: 100%;
+  margin-right: 1rem;
+}
+
+.header__link-btn--bdRadius {
+  border-radius: 1.25rem;
+  width: 10.25rem;
+  height: 100%;
+  background: #13182c;
+  margin-left: 1rem;
+}
+
+.header__wh-btn, .header__inv-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 1.25rem;
+  border: 0;
+  font-family: "Titillium Web";
+  font-size: 0.8125rem;
+  line-height: 1.25rem;
+  font-weight: none;
+  font-style: normal;
+  color: #ffffff;
+  background-color: #232940;
+}
+
+.header__wh-btn {
+  background-color: #13182c;
+}
+
+.header__inv-btn {
+  background-color: #232940;
 }
 
 @media (min-width: 768px) {
@@ -2158,6 +2156,7 @@ a {
   background: #FFFFFF;
   position: absolute;
   height: 100vh;
+  z-index: 1000000000;
 }
 
 .delete-modal__tablet-wrapper {
@@ -2183,6 +2182,7 @@ a {
 }
 
 .delete-modal__header {
+  z-index: 10;
   margin-bottom: 1rem;
   font-size: 1.75rem;
 }
@@ -3504,6 +3504,7 @@ a {
   background: #FFFFFF;
   position: absolute;
   height: 100vh;
+  z-index: 1000000000;
 }
 
 .delete-modal__tablet-wrapper {
@@ -3529,6 +3530,7 @@ a {
 }
 
 .delete-modal__header {
+  z-index: 10;
   margin-bottom: 1rem;
   font-size: 1.75rem;
 }
