--- a/client/src/styles/partials/_header.scss
+++ b/client/src/styles/partials/_header.scss
@@ -1,95 +1,91 @@
 .header {
-  @include mobile {
-    display: flex;
-    // position: absolute;
-    flex-direction: column;
-    align-items: center;
-    // height: 12.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 1.5rem;
+  // background: white;
+
+  &__colour-block {
+    position: absolute;
+    z-index: -1;
+    background-color: $background-color-graphite;
     width: 100%;
-    padding-bottom: 1.5rem;
-    // background-color: $background-color-graphite;
+    height: 12.5rem;
 
-    &__colour-block {
-      position: absolute;
-      z-index: -1;
-      background-color: $background-color-graphite;
-      width: 100%;
-      height: 12.5rem;
-
-      @include tablet {
-        height: 11.625rem;
-      }
+    @include tablet {
+      height: 11.625rem;
     }
+  }
 
-    &__logo-container {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      padding: 1.89rem 0;
-      position: relative;
-      z-index: 10;
+  &__logo-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 1.89rem 0;
+    // position: relative;
+    // z-index: 10;
+  }
+
+  &__logo {
+    display: flex;
+    height: 1.75rem;
+    width: 8rem;
+  }
+
+  &__wh-inv-container {
+    display: flex;
+    height: 2.25rem;
+    position: relative;
+    // z-index: 10;
+
+    @include desktop {
+      padding-right: 3.875rem;
     }
+  }
 
-    &__logo {
-      display: flex;
-      height: 1.75rem;
-      width: 8rem;
-    }
+  &__link-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10.25rem;
+    height: 100%;
+    margin-right: 1rem;
 
-    &__wh-inv-container {
-      display: flex;
-      height: 2.25rem;
-      //   padding-top: 0;
-      position: relative;
-      z-index: 10;
-
-      @include desktop {
-        padding-right: 3.875rem;
-      }
-    }
-
-    &__link-btn {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    &--bdRadius {
+      border-radius: 1.25rem;
       width: 10.25rem;
       height: 100%;
-      margin-right: 1rem;
-      &--bdRadius {
-        border-radius: 1.25rem;
-        width: 10.25rem;
-        height: 100%;
-        background: $primary-color-black;
-        margin-left: 1rem;
-      }
+      background: $primary-color-black;
+      margin-left: 1rem;
     }
+  }
 
-    &__wh-btn,
-    &__inv-btn {
-      display: flex;
-      height: 1.25rem;
-      border: 0;
-      font-family: "Titillium Web";
-      @include fonts(0.8125rem, 1.25rem, none);
-      font-style: normal;
-      color: $primary-color-white;
-      background-color: $background-color-graphite;
-    }
+  &__wh-btn,
+  &__inv-btn {
+    display: flex;
+    height: 1.25rem;
+    border: 0;
+    font-family: "Titillium Web";
+    @include fonts(0.8125rem, 1.25rem, none);
+    font-style: normal;
+    color: $primary-color-white;
+    background-color: $background-color-graphite;
+    // z-index: -1;
+  }
 
-    &__wh-btn {
-      background-color: $primary-color-black;
-    }
+  &__wh-btn {
+    background-color: $primary-color-black;
+  }
 
-    &__inv-btn {
-      background-color: $background-color-graphite;
-    }
+  &__inv-btn {
+    background-color: $background-color-graphite;
   }
 
   @include tablet {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    // height: 11.625rem;
     padding: 0;
   }
 
@@ -104,8 +100,4 @@
       padding-left: 8.125rem;
     }
   }
-  //   &__wh-inv-container {
-  //     // padding: 1.8rem 0;
-  //     height: 50%;
-  //   }
 }
