--- a/client/src/styles/partials/_inventoryItems.scss
+++ b/client/src/styles/partials/_inventoryItems.scss
@@ -456,6 +456,7 @@
   background: #FFFFFF;
   position: absolute;
   height: 100vh;
+  z-index: 1000000000;
 
   &__tablet-wrapper {
     display: flex;
@@ -476,6 +477,8 @@
   }
 
   &__header {
+    z-index: 10;
+    // background: green; // temp 
     margin-bottom: 1rem;
     font-size: 1.75rem;
   }
